src/index.css
@import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500;600;700&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
}

:root {
  --mainFont: 'Red Rose', 'serif';
  --main-color: #A02279;
}


li a {
  font: 400 16px var(--mainFont);
  color: rgb(240, 240, 240);
  padding-block: 1.5rem;
  text-decoration: none;
}


#srch-btn {
  position: absolute;
  right: 1rem;
  width: 210px;
  height: 54px;
  border-radius: 8px 0px 0px 8px;
  border: none;
  background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.46%);
  border-radius: 0px 8px 8px 0px;
  color: #fff;
  font-weight: 400;
  font-family: var(--mainFont);
}

.grid {
  width: 95%;
  margin: 1rem auto;
  display: grid;
  margin: auto;
  gap: 1rem;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: minmax(350px auto)
}

.grid>* {
  border-radius: 15px;
}

/* for mobile phones */
@media (max-width:480px) {
  .container {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: auto;
    overflow-x: hidden;

  }


  .places {
    width: 100%;
    margin: auto;
  }

  .nav-places {
    flex-direction: column;
  }

  .grid {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin: auto;
    flex-direction: column;
  }



  main {
    flex-direction: column;
    gap: 2rem;
    width: 100%;
    place-items: center;
    margin: auto;
  }

  .heroimg img {
    object-fit: cover;
    height: 300px;

  }

  .search {
    display: flex;
    flex-direction: column;
  }

  #srch {
    margin-block: 1rem;
    position: relative;
    width: 90%;
    border-radius: 8px;

    height: 44px;
    border-radius: 8px;
    border: 1px solid #A3A3A3;

  }

  #srch-btn {
    position: relative;
    left: 0;
    width: 90%;
    height: 44px;
    border-radius: 8px;

  }

  .navwrap {
    flex-direction: column;

  }

  #ui {
    max-width: 100%;
    display: flex;
    flex-direction: column;
    margin: auto;
    margin-top: 3rem;
    place-items: center;
  }



  .footwrap {
    flex-direction: column-reverse;
  }
}

/* for ipads */
@media (min-width: 481px) and (max-width:820px) {
  main {
    flex-direction: column;
    flex-wrap: wrap;
  }

  .grid {
    grid-template-columns: repeat(2, 1fr);
    margin: auto;
    width: 90%;
  }

}

